# TaMP_proj

./: .gitignore  README.md
backend_server/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  dbtcpserver.cpp  dbtcpserver.h  functions_to_server.h  main_db.cpp  main_echo.cpp  mytcpserver.h
echo_server/: CMakeLists.txt  functions_to_server.cpp  mytcpserver.cpp
